--- a/slideshow.html
+++ b/slideshow.html
@@ -205,8 +205,8 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="52/52_006.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin01.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin01b.jpg" title="variant cover"></div>
-<div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin02.jpg" ></div>
-<div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin02b.jpg"title="variant cover"></div>
+<div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin02b.jpg" title="variant cover"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin03.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin03b.jpg" title="variant cover"></div>
 <div class="mySlides" style="text-align: center;"><img src="5Ronin/5Ronin04.jpg"></div>
@@ -1844,41 +1844,41 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198810.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198811.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanFlagg/AmericanFlagg198812.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFreak01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFreak02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFreak03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFreak04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanFreak05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanGods12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle.jpg" title="Richie (Bradley), Sydney (Amy), Irving (Christian), Rosalyn (Jennifer), Carmine (Jeremy)"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle1.jpg" title="Irving"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle2.jpg" title="[Richie's Mother saying grace in the background] And please help Richard to marry Diane so that I may have grandchildren, and that the Pope may have more followers."></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle3.jpg" title="Smells like flowers, but with garbage"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanHustle5.jpg" title="I just hope the other part of this is all good. And real. Because we're real. You *know* that. You deal with us, you're dealing with a *real* organization. We're dealing with you, we don't know what we're dealing with."></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor001.jpg" title="cover by Gary Dunn"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor002.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor003.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor004.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor005.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor006.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor007.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor008.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor009.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor010.jpg" title=""></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendorVertigo.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanSplendorDarkHorse.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFreak/AmericanFreak01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFreak/AmericanFreak02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFreak/AmericanFreak03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFreak/AmericanFreak04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanFreak/AmericanFreak05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanGods/AmericanGods12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle.jpg" title="Richie (Bradley), Sydney (Amy), Irving (Christian), Rosalyn (Jennifer), Carmine (Jeremy)"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle1.jpg" title="Irving"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle2.jpg" title="[Richie's Mother saying grace in the background] And please help Richard to marry Diane so that I may have grandchildren, and that the Pope may have more followers."></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle3.jpg" title="Smells like flowers, but with garbage"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanHustle/AmericanHustle5.jpg" title="I just hope the other part of this is all good. And real. Because we're real. You *know* that. You deal with us, you're dealing with a *real* organization. We're dealing with you, we don't know what we're dealing with."></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor001.jpg" title="cover by Gary Dunn"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor002.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor003.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor004.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor005.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor006.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor007.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor008.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor009.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor010.jpg" title=""></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendorVertigo.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendorDarkHorse.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanVampire01.jpg" title="cover by Jim Lee"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanVampire02.jpg" title="cover by Rafael Albuquerque"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanVampire03.jpg" title="cover by Rafael Albuquerque"></div>
