--- a/slideshow.html
+++ b/slideshow.html
@@ -1879,88 +1879,88 @@ A slideshow of all covers on it's own page as the site has 1000s of images so th
 <div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendor010.jpg" title=""></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendorVertigo.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AmericanSplendor/AmericanSplendorDarkHorse.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire01.jpg" title="cover by Jim Lee"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire02.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire03.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire04.jpg" title="cover by Bernie Wrightson"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire05.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire06.jpg" title="cover by Andy Kubert"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire07.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire08.jpg" title="cover by J.H. Williams III"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire09.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire10.jpg" title="cover by Paul Pope"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire11.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire12.jpg" title="cover by Rafael Grampa"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVampire13.jpg" title="cover by Rafael Albuquerque"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin07.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin08.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin09.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin24.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder01.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder02.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder03.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder04.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder05.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AmyReeder06.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai4.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai5.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai6.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai7.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai8.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai9.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai10.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai11.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai12.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai13.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai14.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai15.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai16.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai17.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai18.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai19.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai20.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai21.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai22.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="AnantPai23.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Anarchy1.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Anarchy2.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Anarchy3.jpg"></div>
-<div class="mySlides" style="text-align: center;"><img src="Anarchy4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire01.jpg" title="cover by Jim Lee"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire02.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire03.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire04.jpg" title="cover by Bernie Wrightson"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire05.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire06.jpg" title="cover by Andy Kubert"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire07.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire08.jpg" title="cover by J.H. Williams III"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire09.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire10.jpg" title="cover by Paul Pope"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire11.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire12.jpg" title="cover by Rafael Grampa"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVampire/AmericanVampire13.jpg" title="cover by Rafael Albuquerque"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin07.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin08.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin09.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericanVirgin/AmericanVirgin24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmericasBestComics/AmericasBestComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder02.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder03.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder04.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder05.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AmyReeder/AmyReeder06.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="AnantPai/AnantPai23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Anarchy/Anarchy4.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="AndHerNameWasMaud3.jpg"></div>
